--- a/ejercicios/css/02-pedido.css
+++ b/ejercicios/css/02-pedido.css
@@ -14,14 +14,15 @@ label {
 	font-weight: bold;
 }
 input[type="text"],
-input[type="number"] {
+input[type="number"],
+select {
 	width: 100%;
 	padding: 10px;
 	margin-bottom: 15px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
 }
-input[type="submit"] {
+.btnPedido {
 	background-color: #007bff;
 	color: #fff;
 	border: none;
@@ -29,7 +30,7 @@ input[type="submit"] {
 	cursor: pointer;
 	border-radius: 3px;
 }
-input[type="submit"]:hover {
+.btnPedido:hover {
 	background-color: #0056b3;
 	text-align: center;
 }
