--- a/formularios-html/css/00-index.css
+++ b/formularios-html/css/00-index.css
@@ -6,6 +6,9 @@ body {
 	background-color: #f5f5f5;
 	margin: 0;
 	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-content: center;
 }
 
 section {
@@ -38,22 +41,13 @@ a:hover {
 
 /* Estilos para botones */
 button {
+	flex: 1 1 0;
 	background-color: #04aa6d;
 	color: white;
 	border: none;
 	padding: 10px 20px;
 	cursor: pointer;
 	border-radius: 4px;
-}
-
-/* Estilos para enlaces */
-a {
-	color: #04aa6d;
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
 }
 
 .volver {
