--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,8 @@ button {
 	font-size: 16px;
 	cursor: pointer;
 	transition: background-color 0.3s ease;
+	flex: 1 1 auto;
+	border-radius: 10px;
 }
 
 button:hover {
@@ -33,11 +35,6 @@ button:hover {
 button a {
 	text-decoration: none;
 	color: #fff;
-}
-
-/* Estilos para la sección */
-section {
-	margin: 20px;
 }
 
 /* Estilos para el enlace dentro del botón */
@@ -54,21 +51,28 @@ a:hover {
 /* centrar contenido */
 
 .container {
-	padding: 50px;
-	border: solid 1px;
-	width: 100vw;
-	height: 100vh;
+	padding: 10px;
 	text-align: center;
-	display: flex;
-	flex-direction: column;
+}
+
+h1 {
+	margin-top: 30px;
 }
 
 .container-field {
+	width: 80%;
 	display: flex;
 	flex-flow: row wrap;
-	text-align: center;
-	gap: 20px;
+	justify-content: space-around;
+	align-items: center;
+	margin: auto;
+	margin-top: 50px;
 }
 .container-field section {
-	flex: 1 1 0;
+	width: 30%;
+	height: 75px;
+	display: flex;
+	justify-content: center;
+	align-items: stretch;
+	margin: 20px;
 }
