--- a/examen/resultados/style.css
+++ b/examen/resultados/style.css
@@ -31,7 +31,7 @@ h1 {
 	border-radius: 10px;
 	text-decoration: none;
 	text-transform: uppercase;
-	color: darkred;
+	color: mediumblue;
 	font-weight: bolder;
 	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
